# uav_hitl_dynamics

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Dockerfile  README.md  catkin_test.sh  install_requirements.sh  package.xml  requirements.txt  sonar-project.properties
.github/workflows/: catkin_build.yml  code_style.yml  sonarcloud.yml  tests.yml
config/: aerodynamics_coeffs.yaml  ardupilot_cyphal_inno_vtol.params  ardupilot_inno_vtol.params  hitl_inno_vtol_1.13.params  multicopter_params.yaml  quadrotor_params_ardupilot.yaml  sim_params.yaml  uavcan_params.yaml  uavcan_params_actuators.yaml  uavcan_params_baro.yaml  uavcan_params_gps.yaml  uavcan_params_imu.yaml  uavcan_params_mag.yaml  uavcan_params_redundant_airspeed.yaml  uavcan_params_sensors.yaml  vtol_params.yaml
config/dronecan/: baro.yaml  battery.yaml  gps.yaml  mag.yaml  sensors.yaml
config/vehicle_params/: README.md
config/vehicle_params/octorotor/: README.md  params.yaml
config/vehicle_params/quadrotor/: README.md
config/vehicle_params/vtol_7kg/: README.md  params.yaml
config/vehicle_params/vtol_cargo/: README.md
config/vehicle_params/vtol_tfm15/: README.md  params.yaml
doc/: aerodynamics.md
include/: common_math.hpp  cs_converter.hpp  innopolis_vtol_dynamics_node.hpp  sensors.hpp
include/dynamics/: uavDynamicsSimBase.hpp  vtolDynamicsSim.hpp
launch/: 3d_sim.launch  dynamics.launch  flight_goggle_sitl.launch  hitl.launch  inno_sim.launch  load_parameters.launch  sitl.launch  uavcan_communicator.launch
libs/UavDynamics/include/UavDynamics/math/: geodetic.hpp  wmm.hpp
libs/UavDynamics/src/math/: geodetic.cpp  wmm.cpp
libs/multicopterDynamicsSim/: multicopterDynamicsSim.cpp  multicopterDynamicsSim.hpp
scripts/: Dockerfile  cpplint.sh  docker.sh
src/: README.md  actuators.cpp  actuators.hpp  common_math.cpp  common_math.hpp  cs_converter.cpp  cs_converter.hpp  inno_vtol_reverse_mixer_node.cpp  innopolis_vtol_dynamics_node.cpp  logger.cpp  logger.hpp  main.cpp  main.hpp  mavlink_communicator.cpp  mixer_node.cpp  rviz_visualization.cpp  rviz_visualization.hpp  scenarios.cpp  scenarios.hpp  sensors.cpp  sensors.hpp  sensors_isa_model.hpp  uavDynamicsNode.cpp  uavDynamicsNode.hpp
src/dynamics/: README.md  dynamics.hpp  flightgogglesDynamicsSim.cpp  uavDynamicsSimBase.cpp  uavDynamicsSimBase.hpp  vtolDynamicsSim.cpp
src/dynamics/multirotor/: README.md  multirotor.cpp  multirotor.hpp
src/dynamics/octocopter/: README.md  octocopter.cpp  octocopter.hpp
src/dynamics/quadcopter/: README.md  flightgogglesDynamicsSim.cpp  flightgogglesDynamicsSim.hpp  quadcopter.cpp  quadcopter.hpp
src/dynamics/vtol/: README.md  aerodynamics.md  vtolDynamicsSim.cpp  vtolDynamicsSim.hpp
src/mixers/: CMakeLists.txt  README.md  base_mixer.cpp  base_mixer.hpp  main.cpp  mixer_babyshark.cpp  mixer_babyshark.hpp  mixer_direct.cpp  mixer_direct.hpp  px4_v1.12.1_13070.cpp  px4_v1.12.1_13070.hpp  px4_v1.14.0_13000_vtol_4_motors.cpp  px4_v1.14.0_13000_vtol_4_motors.hpp  px4_v1.14.0_13000_vtol_8_motors.cpp  px4_v1.14.0_13000_vtol_8_motors.hpp  px4_v1.14.0_13000_vtol_quadplane.cpp  px4_v1.14.0_13000_vtol_quadplane.hpp
src/sensors/: README.md  attitude.cpp  attitude.hpp  barometer.cpp  barometer.hpp  battery.cpp  battery.hpp  differential_pressure.cpp  differential_pressure.hpp  esc_status.cpp  esc_status.hpp  fuel_tank.cpp  fuel_tank.hpp  gnss.cpp  gnss.hpp  ice.cpp  ice.hpp  imu.cpp  imu.hpp  mag.cpp  mag.hpp  sensor_base.cpp  sensor_base.hpp  sensors.cpp  sensors.hpp  sensors_isa_model.hpp  velocity.cpp  velocity.hpp
src/tests/: test_isa_model.cpp  test_vtol_dynamics.cpp
tests/: test_isa_model.cpp  test_vtol_dynamics.cpp
